--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
       <div class="container">
         <h1 class="title is-2 has-text-centered">ASML Tunable Wavefront Control Metasurface</h1>
         <h2 class="subtitle has-text-centered">
-          Ping Sun<sup>1</sup>, Zhengyang Zhang<sup>1</sup>, Mingzhe Han<sup>1</sup>, Edith Koo<sup>1</sup>, Michele Cotrufo<sup>1</sup>
+          Ping Sun<sup>1</sup>, Zhengyang Zhang<sup>1</sup>, Mingzhe Han<sup>1</sup>, Edith Koo<sup>1</sup>, Michele Cotrufo<sup>2</sup>
         </h2>
         <p class="has-text-centered">
           <sup>1</sup>The Institute of Optics, University of Rochester, Rochester, NY, USA<br>
-          <strong>Dated:</strong> December 01, 2024
+          <sup>2</sup>Principal Investigator, The Institute of Optics, University of Rochester, Rochester, NY, USA<br>       
+          <strong>Dated:</strong> May, 2024
         </p>
       </div>
     </div>
