--- a/index.html
+++ b/index.html
@@ -29,5 +29,13 @@
       </div>
     </div>
   </section>
+
+
+    <!-- PDF Display Section -->
+  <section class="section">
+    <div class="container">
+      <iframe src="static/ASML%20Metawave%20Senior%20Design%20Poster.pdf#zoom=150" class="pdf-container"></iframe>
+    </div>
+  </section>
 </body>
 </html>
