--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       font-family: Arial, sans-serif;
       line-height: 1.6;
     }
+    .pdf-container {
+      width: 100%;
+      height: 150vh; /* Increase the height to make the PDF display larger */
+      border: none; /* Remove iframe border for a cleaner look */
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -30,8 +36,7 @@
     </div>
   </section>
 
-
-    <!-- PDF Display Section -->
+  <!-- PDF Display Section -->
   <section class="section">
     <div class="container">
       <iframe src="static/ASML%20Metawave%20Senior%20Design%20Poster.pdf#zoom=150" class="pdf-container"></iframe>
