--- a/index.html
+++ b/index.html
@@ -4,43 +4,39 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ASML Tunable Wavefront Control Metasurface</title>
-  <link rel="stylesheet" href="static/css/bulma.min.css">
   <style>
     body {
+      margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
       line-height: 1.6;
-      margin: 0;
-      padding: 0;
     }
-    .pdf-fullscreen {
-      width: 100%;
-      height: 100vh;
-      margin: 0;
-      padding: 0;
-      display: block;
-      border: none;
+    .image-container {
+      text-align: center;
+      margin-top: 20px;
+    }
+    .large-image {
+      max-width: 90%;
+      height: auto;
+      display: inline-block;
+      margin: 0 auto;
     }
   </style>
 </head>
 <body>
   <!-- Title Section -->
-  <section class="hero is-light">
-    <div class="hero-body">
-      <div class="container">
-        <h1 class="title is-2 has-text-centered">ASML Tunable Wavefront Control Metasurface</h1>
-        <h2 class="subtitle has-text-centered">
-          Ping Sun, Zhengyang Zhang, Mingzhe Han, Edith Koo, Michele Cotrufo
-        </h2>
-        <p class="has-text-centered">
-          The Institute of Optics, University of Rochester, Rochester, NY, USA<br>
-          <strong>Dated:</strong> May, 2024
-        </p>
-      </div>
+  <section>
+    <div style="text-align: center; padding: 20px;">
+      <h1>ASML Tunable Wavefront Control Metasurface</h1>
+      <h2>Ping Sun, Zhengyang Zhang, Mingzhe Han, Edith Koo, Michele Cotrufo</h2>
+      <p>The Institute of Optics, University of Rochester, Rochester, NY, USA<br>
+      <strong>Dated:</strong> May, 2024</p>
     </div>
   </section>
 
-  <!-- PDF Fullscreen Display -->
-  <embed src="static/ASML%20Metawave%20Senior%20Design%20Poster.pdf#zoom=150" type="application/pdf" class="pdf-fullscreen">
+  <!-- Image Display Section -->
+  <section class="image-container">
+    <img src="static/幻灯片1.JPG" alt="ASML Metasurface Poster" class="large-image">
+  </section>
 </body>
 </html>
-
