--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
       font-family: Arial, sans-serif;
       line-height: 1.6;
     }
+    .header-container {
+      background-color: #f0f0f0; /* Light grey background for the title section */
+      padding: 20px 10px;
+      text-align: center;
+      border-bottom: 2px solid #ccc;
+    }
+    .header-container h1 {
+      font-size: 2.5rem;
+      margin: 0;
+      color: #333;
+    }
+    .header-container h2 {
+      font-size: 1.5rem;
+      margin: 10px 0 5px;
+      color: #555;
+    }
+    .header-container p {
+      margin: 5px 0;
+      font-size: 1rem;
+      color: #666;
+    }
     .image-container {
       text-align: center;
       margin-top: 20px;
@@ -25,13 +46,11 @@
 </head>
 <body>
   <!-- Title Section -->
-  <section>
-    <div style="text-align: center; padding: 20px;">
-      <h1>ASML Tunable Wavefront Control Metasurface</h1>
-      <h2>Ping Sun, Zhengyang Zhang, Mingzhe Han, Edith Koo, Michele Cotrufo</h2>
-      <p>The Institute of Optics, University of Rochester, Rochester, NY, USA<br>
-      <strong>Dated:</strong> May, 2024</p>
-    </div>
+  <section class="header-container">
+    <h1>ASML Tunable Wavefront Control Metasurface</h1>
+    <h2>Ping Sun, Zhengyang Zhang, Mingzhe Han, Edith Koo, Michele Cotrufo</h2>
+    <p>The Institute of Optics, University of Rochester, Rochester, NY, USA<br>
+    <strong>Dated:</strong> May, 2024</p>
   </section>
 
   <!-- Image Display Section -->
@@ -40,3 +59,4 @@
   </section>
 </body>
 </html>
+s
