--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ASML Tunable Wavefront Control Metasurface</title>
+  <link rel="stylesheet" href="static/css/bulma.min.css">
   <style>
     body {
       margin: 0;
@@ -12,8 +13,8 @@
       line-height: 1.6;
     }
     .header-container {
-      background-color: #f0f0f0; /* Light grey background for the title section */
-      padding: 20px 10px;
+      background-color: #f0f0f0; /* Light grey background */
+      padding: 20px;
       text-align: center;
       border-bottom: 2px solid #ccc;
     }
@@ -24,13 +25,13 @@
     }
     .header-container h2 {
       font-size: 1.5rem;
-      margin: 10px 0 5px;
+      margin: 10px 0;
       color: #555;
     }
     .header-container p {
-      margin: 5px 0;
       font-size: 1rem;
       color: #666;
+      margin: 5px 0;
     }
     .image-container {
       text-align: center;
@@ -40,17 +41,21 @@
       max-width: 90%;
       height: auto;
       display: inline-block;
-      margin: 0 auto;
     }
   </style>
 </head>
 <body>
   <!-- Title Section -->
   <section class="header-container">
-    <h1>ASML Tunable Wavefront Control Metasurface</h1>
-    <h2>Ping Sun, Zhengyang Zhang, Mingzhe Han, Edith Koo, Michele Cotrufo</h2>
-    <p>The Institute of Optics, University of Rochester, Rochester, NY, USA<br>
-    <strong>Dated:</strong> May, 2024</p>
+    <h1 class="title is-2 has-text-centered">ASML Tunable Wavefront Control Metasurface</h1>
+    <h2 class="subtitle has-text-centered">
+      Ping Sun<sup>1</sup>, Zhengyang Zhang<sup>1</sup>, Mingzhe Han<sup>1</sup>, Edith Koo<sup>1</sup>, Michele Cotrufo<sup>2</sup>
+    </h2>
+    <p>
+      <sup>1</sup>The Institute of Optics, University of Rochester, Rochester, NY, USA<br>
+      <sup>2</sup>Principal Investigator, The Institute of Optics, University of Rochester, Rochester, NY, USA<br>       
+      <strong>Dated:</strong> May, 2024
+    </p>
   </section>
 
   <!-- Image Display Section -->
@@ -59,4 +64,3 @@
   </section>
 </body>
 </html>
-s
