--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <!-- Image Display Section -->
   <section class="image-container">
-    <img src="static/幻灯片1.JPG" alt="ASML Metasurface Poster" class="large-image">
+    <img src="static/poster1.JPG" alt="ASML Metasurface Poster" class="large-image">
   </section>
 </body>
 </html>
